package bioSynthese;

public class AminoAcid {
    AminoAcid(){

    }
}
