@startuml

title __GENETICS's Class Diagram__\n

  package bioSyntheseInheritanceUse {
    class AminoAcid {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Base {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Dna {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class DnaRepository {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Enzyme {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Program {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Protein {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Ribosome {
    }
  }
  

  package bioSyntheseInheritanceUse {
    class Rna {
    }
  }
  

  package bioSyntheseInheritanceUse {
    abstract class Strand {
    }
  }
  

  Dna -up-|> Strand
  DnaRepository o-- Dna : dna
  Rna -up-|> Strand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
